# AI-Tutor-LLM-multimodel-QA

./: .env.example  .gitignore  LICENSE  MODELS.md  README.md  SETUP.md  pyproject.toml  requirements.txt  test_models.py
.github/workflows/: ci.yml
notebooks/: week1_EXERCISE.ipynb
src/: models.py  utils.py  week1_exercise.py
