[project]
name            = "llm-multimodel-qa"
version         = "0.1.0"
description     = "Ask a question. Compare answers from Claude, Gemini, Llama, and DeepSeek side by side."
readme          = "README.md"
requires-python = ">=3.12"
license         = { file = "LICENSE" }
authors         = [{ name = "Animesh Anand", email = "animesh.anand27391@gmail.com" }]

keywords = ["llm", "anthropic", "gemini", "ollama", "deepseek", "ai", "multi-model"]

dependencies = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "openai>=1.50.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "ipython>=8.0.0"]
dev      = ["pytest>=8.0.0", "black>=24.0.0", "ruff>=0.4.0"]

[project.urls]
Homepage   = "https://github.com/animeshanand27391-bit/AI-Tutor-LLM-multimodel-QA"
LinkedIn   = "https://linkedin.com/in/animesh-anand27"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
